--- a/ordersystem/templates/login.html
+++ b/ordersystem/templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>用户登录</title>
-    <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css">
 </head>
 <h3 class="text-center" style="color:orangered">欢迎登陆会议室预定系统</h3>
 <br>
@@ -33,10 +33,13 @@
     </div>
 </div>
 
-<script src="/static/bootstrap/js/bootstrap.min.js"></script>
-<script src="/static/js/jquery-3.3.1.min.js"></script>
+<script src="../static/js/jquery-3.6.0.min.js"></script>
+<script src="../static/bootstrap/js/bootstrap.min.js"></script>
 <script>
 
+    $("#login_btn").click(function(){
+        console.log("click")
+    });
 </script>
 </body>
 </html>
