--- a/ordersystem/roomorder/templates/index.html
+++ b/ordersystem/roomorder/templates/index.html
@@ -13,9 +13,6 @@
         #my_div{
             top:215px!important;
         }
-
-
-
     </style>
 </head>
 <body>
@@ -47,15 +44,15 @@
 <br>
 <table class="table table-bordered">
     <thead>
-    <tr>
-        <th>会议室/时间</th>
-        {% for row in time_choice %}
-        <th>{{ row.1 }}</th>
-        {% endfor %}
-    </tr>
+        <tr>
+            <th>会议室（可容纳人数）/时间</th>
+            {% for row in time_choice %}
+            <th>{{ row.1 }}</th>
+            {% endfor %}
+        </tr>
     </thead>
     <tbody>
-    {{ htmls|safe }}
+        {{ htmls|safe }}
     </tbody>
 </table>
 <div>{% csrf_token %}</div>
@@ -67,10 +64,134 @@
 <script src="/static/bootstrap/js/bootstrap.min.js"></script>
 <script src="/static/jquery.datetimepicker.full.min.js"></script>
 <script>
-    $('#datetimepicker11').datetimepicker({
-        timepicker:false,
-        format:"Y-m-d"
+    Date.prototype.myMet=function(fmt){
+        var o={
+            "M+":this.getMonth()+1,
+            "d+":this.getDate(),
+            "h+":this.getHours(),
+            "m+":this.getMinutes(),
+            "s+":this.getSeconds(),
+            "q+":Math.floor((this.getMonth()+3)/3),
+            "S":this.getMilliseconds()
+        };
+        if(/(y+)/.test(fmt)) fmt=fmt.replace(RegExp.$1,(this.getFullYear()+"").substr(4-RegExp.$1.length));
+        for (var k in o)
+            if (new RegExp("(" + k + ")").test(fmt)) fmt = fmt.replace(RegExp.$1, (RegExp.$1.length == 1) ? (o[k]) : (("00" + o[k]).substr(("" + o[k]).length)));
+        return fmt;
+    };
+    TODAY_DATE=new Date().myMet("yyyy-MM-dd");
+    function TdClick(){
+        $(".item").click(function(){
+            var room_id=$(this).attr("room_id");
+            var time_id=$(this).attr("time_id");
+            //取消预定
+            if($(this).hasClass("info")){
+                $(this).removeClass("info").empty();
+                if(POST_DATA.DEL[room_id]){
+                    POST_DATA.DEL[room_id].push(time_id);
+                }
+                else{
+                    POST_DATA.DEL[room_id]=[time_id,];
+                }
+            }
+            //取消临时预定
+            else if($(this).hasClass("td_active")){
+                $(this).removeClass("td_active");
+                var index=$.inArray(time_id,POST_DATA.ADD[room_id]);
+                POST_DATA.ADD[room_id].splice(index,1);
+            }
+            //增加新预定
+            else{
+                $(this).addClass("td_active");
+                if(POST_DATA.ADD[room_id]){
+                    POST_DATA.ADD[room_id].push(time_id);
+                }
+                else{
+                    POST_DATA.ADD[room_id]=[time_id,];
+                }
+            }
+        });
+    };
+    TdClick();
+
+    //日期
+    if(location.search.slice(11)){
+        CHOOSE_DATE=location.search.slice(11)
+    }
+    else{
+        CHOOSE_DATE=new Date().myMet('yyyy-MM-dd');
+    }
+
+    //ajax与后端通信
+    $(".book_btn").click(function(){
+        $.ajax({
+            url:"/roomorder/book/",
+            type:"post",
+            data:{
+                choose_date:CHOOSE_DATE,
+                csrfmiddlewaretoken:$("[name='csrfmiddlewaretoken']").val(),
+                post_data:JSON.stringify(POST_DATA),
+            },
+            dataType:"json",
+            success:function(data){
+                if(data.status==1){
+                    alert("预定成功");
+                    location.href="";
+                }else if(data.status==2){
+                    alert("未修改信息");
+                    location.href="";
+                }else{
+                    alert("该时间已被预定");
+                    location.href="";
+                }
+            },
+        });
     });
+
+    //日历插件
+    function book_query(e){
+        CHOOSE_DATE=e.date.myMet("yyyy-MM-dd");
+        location.href="/index/?book_date="+CHOOSE_DATE;
+    }
+    //判断输入日期格式是否正确
+    function isDate(data){
+        var filter  = /((^((1[8-9]\d{2})|([2-9]\d{3}))([-\/\._])(10|12|0?[13578])([-\/\._])(3[01]|[12][0-9]|0?[1-9])$)|(^((1[8-9]\d{2})|([2-9]\d{3}))([-\/\._])(11|0?[469])([-\/\._])(30|[12][0-9]|0?[1-9])$)|(^((1[8-9]\d{2})|([2-9]\d{3}))([-\/\._])(0?2)([-\/\._])(2[0-8]|1[0-9]|0?[1-9])$)|(^([2468][048]00)([-\/\._])(0?2)([-\/\._])(29)$)|(^([3579][26]00)([-\/\._])(0?2)([-\/\._])(29)$)|(^([1][89][0][48])([-\/\._])(0?2)([-\/\._])(29)$)|(^([2-9][0-9][0][48])([-\/\._])(0?2)([-\/\._])(29)$)|(^([1][89][2468][048])([-\/\._])(0?2)([-\/\._])(29)$)|(^([2-9][0-9][2468][048])([-\/\._])(0?2)([-\/\._])(29)$)|(^([1][89][13579][26])([-\/\._])(0?2)([-\/\._])(29)$)|(^([2-9][0-9][13579][26])([-\/\._])(0?2)([-\/\._])(29)$))/;
+        if(filter.test(data)){
+            return true;
+        }else{
+            return false;
+        }
+    }
+    //监听日期改变
+    $("#datetimepicker11").change(function(){
+        var test=$(this).val();
+        if(isDate(test)){
+            if(test<TODAY_DATE){
+                alert("只能选择未来日期！")
+            }
+            CHOOSE_DATE=test;
+            location.href="/index/?book_date="+CHOOSE_DATE;
+        }else{
+            alert("日期格式错误！");
+            location.href="";
+        }
+    });
+    //日历插件初始化及配置
+    $('#datetimepicker11').datetimepicker({
+        minView:2,
+        startView:2,
+        language:"zh-CN",
+        sideByside:true,
+        timepicker:false,
+        format:'yyyy-mm-dd',
+        startDate:TODAY_DATE,
+        todayBtn:true,
+        todayHighlight:1,
+        enterLikeTab:false,
+        bootcssVer:3,
+        autoclose:true,
+    }).on('change',book_query).val(CHOOSE_DATE).css('font-weight','bold');
+    $(".datetimepicker.datetimepicker-dropdown-bottom-right.dropdown-menu").attr("id","my_div");
 </script>
 </body>
 </html>
