--- a/ordersystem/roomorder/templates/index.html
+++ b/ordersystem/roomorder/templates/index.html
@@ -80,24 +80,37 @@
         return fmt;
     };
     TODAY_DATE=new Date().myMet("yyyy-MM-dd");
+    var POST_DATA={
+        "ADD":{},
+        "DEL":{},
+    };
     function TdClick(){
+        //td绑定事件,单击一个单元格触发的事件
         $(".item").click(function(){
             var room_id=$(this).attr("room_id");
             var time_id=$(this).attr("time_id");
+            //alert(room_id);
+            //alert(room_id);
             //取消预定
+            //TODO 单拿出来放一个取消按钮
             if($(this).hasClass("info")){
-                $(this).removeClass("info").empty();
+                //如果点击的是info类，则删除info类并清空
+                //$(this).removeClass("info").empty();
                 if(POST_DATA.DEL[room_id]){
+                    // 在数据中已经存有会议室信息，将新单元格time_id添加进数组
                     POST_DATA.DEL[room_id].push(time_id);
                 }
                 else{
+                    // 在数据中没有存过对应会议室记录，直接将time_id对其赋值创建一个字典
                     POST_DATA.DEL[room_id]=[time_id,];
                 }
             }
             //取消临时预定
             else if($(this).hasClass("td_active")){
                 $(this).removeClass("td_active");
+                //去掉被选中的标签
                 var index=$.inArray(time_id,POST_DATA.ADD[room_id]);
+                //在POST数据中删除
                 POST_DATA.ADD[room_id].splice(index,1);
             }
             //增加新预定
@@ -151,7 +164,8 @@
     //日历插件
     function book_query(e){
         CHOOSE_DATE=e.date.myMet("yyyy-MM-dd");
-        location.href="/index/?book_date="+CHOOSE_DATE;
+        console.log(e);
+        location.href="/roomorder/index/?book_date="+CHOOSE_DATE;
     }
     //判断输入日期格式是否正确
     function isDate(data){
@@ -162,15 +176,21 @@
             return false;
         }
     }
+    console.log(isDate(TODAY_DATE));
     //监听日期改变
     $("#datetimepicker11").change(function(){
         var test=$(this).val();
         if(isDate(test)){
             if(test<TODAY_DATE){
-                alert("只能选择未来日期！")
+                console.log(test);
+                //alert("只能选择未来日期！");
+                CHOOSE_DATE=test;
+                location.href="/roomorder/index/?book_date="+CHOOSE_DATE;
             }
-            CHOOSE_DATE=test;
-            location.href="/index/?book_date="+CHOOSE_DATE;
+            else{
+                CHOOSE_DATE=test;
+                location.href="/roomorder/index/?book_date="+CHOOSE_DATE;
+            }
         }else{
             alert("日期格式错误！");
             location.href="";
@@ -182,8 +202,8 @@
         startView:2,
         language:"zh-CN",
         sideByside:true,
-        timepicker:false,
-        format:'yyyy-mm-dd',
+        //timepicker:false,
+        format:'Y-m-d',
         startDate:TODAY_DATE,
         todayBtn:true,
         todayHighlight:1,
