--- a/ordersystem/roomorder/templates/index.html
+++ b/ordersystem/roomorder/templates/index.html
@@ -274,7 +274,6 @@
                 },
                 dataType: "json",
                 success: function(data) {
-
                     if (data.status == 1) {
                         alert("预定成功");
                         location.href = "";
@@ -295,7 +294,7 @@
             POST_DATA.printel = $("#printel").val();
             POST_DATA.booktel = $("#booktel").val();
             $.ajax({
-                url: "roomorder/book/",
+                url: "/roomorder/book/",
                 type: "post",
                 data: {
                     choose_date: CHOOSE_DATE,
@@ -305,7 +304,17 @@
                 },
                 dataType: "json",
                 success: function(data) {
-
+                    if (data.status == 1) {
+                        alert("预定成功");
+                        location.href = "";
+                    } else if (data.status == 2) {
+                        alert("未修改信息");
+                        location.href = "";
+                    } else {
+                        alert("该时间已被预定");
+                        console.log(data.msg)
+                        location.href = "";
+                    }
                 },
             });
         });
