--- a/ordersystem/roomorder/templates/index.html
+++ b/ordersystem/roomorder/templates/index.html
@@ -405,7 +405,7 @@
             startView: 2,
             language: "zh-CN",
             sideByside: true,
-            //timepicker:false,
+            timepicker:false,
             format: 'Y-m-d',
             startDate: TODAY_DATE,
             todayBtn: true,
